feat: add Register page markdown
-add markdown to Register.cshtml file in /Identity/Pages/Account/ directory

--- a/src/MTRPZ4.UI/Areas/Identity/Pages/Account/Register.cshtml
+++ b/src/MTRPZ4.UI/Areas/Identity/Pages/Account/Register.cshtml
@@ -1,32 +1,85 @@
 ﻿@page
 @model RegisterModel
-@{
-    ViewData["Title"] = "Register";
-    Layout = "~/Areas/Identity/Pages/_AuthLayout.cshtml";
-}
 
-<form id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post">
-    <h2 class="row justify-content-center">New Account</h2>
-    <hr />
-    <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
-    <div class="form-floating mb-3">
-        <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" placeholder="name@example.com" />
-        <label asp-for="Input.Email">Email</label>
-        <span asp-validation-for="Input.Email" class="text-danger"></span>
-    </div>
-    <div class="form-floating mb-3">
-        <input asp-for="Input.Password" class="form-control" autocomplete="new-password" aria-required="true" placeholder="password" />
-        <label asp-for="Input.Password">Password</label>
-        <span asp-validation-for="Input.Password" class="text-danger"></span>
-    </div>
-    <div class="form-floating mb-3">
-        <input asp-for="Input.ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true" placeholder="password" />
-        <label asp-for="Input.ConfirmPassword">Confirm Password</label>
-        <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
-    </div>
-    <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary">Register</button>
-</form>
-    
+<main class="main">
+	<section class="full-page">
+		<div class="full-page__background" aria-hidden="true">
+			<div class="full-page__decor">
+				<picture>
+					<source srcset="/Materials/decor-element-4.webp 1x" type="image/webp">
+					<img src="/Materials/decor-element-4.png" alt="" width="0" height="0" loading="lazy">
+				</picture>
+			</div>
+			<div class="full-page__decor">
+				<picture>
+					<source srcset="/Materials/decor-element-5.webp 1x" type="image/webp">
+					<img src="/Materials/decor-element-5.png" alt="" width="0" height="0" loading="lazy">
+				</picture>
+			</div>
+			<div class="full-page__decor">
+				<picture>
+					<source srcset="/Materials/decor-element-2.webp 1x" type="image/webp">
+					<img src="/Materials/decor-element-2.png" alt="" width="0" height="0" loading="lazy">
+				</picture>
+			</div>
+		</div>
+		<div class="full-page__main">
+
+			<form id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="full-page__auth auth-form">
+				<h1 class="auth-form__title title">
+					New Account
+				</h1>
+				<hr />
+				<div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
+				<label class="auth-form__label">
+					<input asp-for="Input.Email" class="auth-form__input" autocomplete="username" aria-required="true" placeholder="Email" />
+				</label>
+				<label class="auth-form__label">
+					<input asp-for="Input.Password" class="auth-form__input" autocomplete="new-password" aria-required="true" placeholder="Password" />
+				</label>
+				<label class="auth-form__label" style="margin-bottom: 10px;">
+					<input asp-for="Input.ConfirmPassword" class="auth-form__input" autocomplete="new-password" aria-required="true" placeholder="Confirm password" />
+				</label>
+				<hr />
+				<span asp-validation-for="Input.Email " class="text-danger" style="color: red; font-size:12px; display: block;"></span>
+				<span asp-validation-for="Input.Password" class="text-danger" style="color: red; font-size: 12px; display: block;"></span>
+				<span asp-validation-for="Input.ConfirmPassword" class="text-danger" style="color: red; font-size: 12px; display: block;"></span>
+
+
+				<button class="auth-form__submit button" type="submit" aria-label="Register">
+					<span aria-hidden="true"></span>
+					<span>
+						Register
+					</span>
+				</button>
+
+				<div class="auth-form__info min-text">
+					Already have an account?<br>
+					<a href="/Identity/Account/Login">Sign in</a>
+				</div>
+			</form>
+		</div>
+	</section>
+</main>
+
+<footer class="footer">
+	<div class="footer__decor mode-3" aria-hidden="true">
+		<div class="footer__decor-blur">
+			<picture>
+				<source srcset="/Materials/footer-decor-element-3-blur.webp 1x" type="image/webp">
+				<img src="/Materials/footer-decor-element-3-blur.png" alt="" width="0" height="0">
+			</picture>
+		</div>
+		<div class="footer__decor-hero">
+			<img src="/Materials/footer-decor-element-3.svg" width="0" height="0" alt="">
+		</div>
+	</div>
+
+	<partial name="/Views/Shared/_FooterMeta.cshtml" />
+
+</footer>
+
+
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
 }
