--- a/src/MTRPZ4.UI/Views/Shared/_LoginPartial.cshtml
+++ b/src/MTRPZ4.UI/Views/Shared/_LoginPartial.cshtml
@@ -7,14 +7,25 @@
 <ul class="header__nav_auth header__auth">
 	@if (SignInManager.IsSignedIn(User))
 	{
-    <li class="nav-item">
-        <a id="manage" class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @UserManager.GetUserName(User)!</a>
-    </li>
-    <li class="nav-item">
-        <form id="logoutForm" class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
-            <button id="logout" type="submit" class="nav-link btn btn-link text-dark border-0">Logout</button>
-        </form>
-    </li>
+		<li>
+			<a id="manage" asp-area="Identity" asp-page="/Account/Manage/Index" class="button is-min is-transparent" aria-label="Hello @UserManager.GetUserName(User)!">
+				<span aria-hidden="true"></span>
+				<span>
+					Hello @UserManager.GetUserName(User)!
+				</span>
+			</a>
+		</li>
+		<li class="nav-item">
+			<form id="logoutForm" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
+				<button id="logout" type="submit" class="button is-min" style="z-index: 1;">
+					<span aria-hidden="true"></span>
+					<span style="z-index: 2;">
+						Logout
+					</span>
+				</button>
+			</form>
+		</li>
+
 }
 else
 {
