feat: marking current page
-add few scripts for marking current page

--- a/src/MTRPZ4.UI/Views/Home/Index.cshtml
+++ b/src/MTRPZ4.UI/Views/Home/Index.cshtml
@@ -58,3 +58,13 @@
 	<partial name="/Views/Shared/_FooterMeta.cshtml" />
 
 </footer>
+
+<script>
+	var home = document.getElementById("Home");
+	var testing = document.getElementById("Testing");
+	var result = document.getElementById("Results");
+
+	home.classList.add("is-current");
+	testing.classList.remove("is-current");
+	result.classList.remove("is-current");
+</script>
