--- a/src/MTRPZ4.UI/Views/Test/Index.cshtml
+++ b/src/MTRPZ4.UI/Views/Test/Index.cshtml
@@ -175,3 +175,13 @@
 	<partial name="/Views/Shared/_FooterMeta.cshtml" />
 
 </footer>
+
+<script>
+	var home = document.getElementById("Home");
+	var testing = document.getElementById("Testing");
+	var result = document.getElementById("Results");
+
+	home.classList.remove("is-current");
+	testing.classList.add("is-current");
+	result.classList.remove("is-current");
+</script>
