Modify the project views (#6)
* feat: add shared view layer

-add general markup for all views

* feat: add styles and images for views

-add style.min.css and different types of pictures

* feat: separate footer metadate

-add partial file with footer metadate markdown

* feat: add Home page markdown

-add markdown to Index.cshtml file in /Views/Home/ directory

* feat: add Testing page markdown

 -add markdown to Index.cshtml file in /Views/Test/ directory

* feat: add Result page markdown

-add markdown to Index.cshtml file in /Views/Result/ directory

* update: add extrnal images to Materials

-add new pictures to Materials for Result view

* delete: remove unused layout

-remove _AuthLayout.cshtml because its use in the future is not provided

* feat: add Login page markdown

-add markdown to Login.cshtml file in /Identity/Pages/Account/ directory

* feat: add Register page markdown

-add markdown to Register.cshtml file in /Identity/Pages/Account/ directory

* feat: Add fonts for views

-add required fonts

* fix: fix logout and user display

* feat: marking current page

-add few scripts for marking current page

--- a/src/MTRPZ4.UI/Views/Result/Index.cshtml
+++ b/src/MTRPZ4.UI/Views/Result/Index.cshtml
@@ -1,5 +1,113 @@
-﻿
-<div class="text-center">
-    <h1 class="display-4">Testing Results</h1>
-    <a class="nav-link text-dark" asp-controller="Home" asp-action="Index">Go to Start Page</a>
-</div>
+﻿<main class="main">
+	<div class="main__background" aria-hidden="true">
+		<picture>
+			<source srcset="/Materials/decor-element-1.webp 1x" type="image/webp">
+			<img src="/Materials/decor-element-1.png" alt="" width="0" height="0" loading="lazy">
+		</picture>
+	</div>
+	<section class="home">
+		<div class="home__decor" aria-hidden="true">
+			<picture>
+				<source srcset="/Materials/decor-element-2.webp 1x" type="image/webp">
+				<img src="/Materials/decor-element-2.png" alt="" width="0" height="0" loading="lazy">
+			</picture>
+		</div>
+		<h1 class="home__title main-title">
+			Analytics of the obtained results
+		</h1>
+		<div class="home__main-chart main-chart" data-simplebar="init" data-simplebar-auto-hide="false">
+			<div class="simplebar-wrapper" style="margin: -50px 0px 0px;">
+				<div class="simplebar-height-auto-observer-wrapper"><div class="simplebar-height-auto-observer"></div></div><div class="simplebar-mask">
+					<div class="simplebar-offset" style="right: 0px; bottom: 0px;">
+						<div class="simplebar-content-wrapper" tabindex="0" role="region" aria-label="scrollable content" style="height: auto; overflow: hidden;">
+							<div class="simplebar-content" style="padding: 50px 0px 0px;">
+								<div class="main-chart__inner">
+									<div class="main-chart__container"><canvas width="1340" height="670" style="display: block; box-sizing: border-box; height: 670px; width: 1340px;"></canvas></div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div><div class="simplebar-placeholder" style="width: 1340px; height: 720px;"></div>
+			</div><div class="simplebar-track simplebar-horizontal" style="visibility: hidden;"><div class="simplebar-scrollbar simplebar-visible" style="width: 0px; display: none;"></div></div><div class="simplebar-track simplebar-vertical" style="visibility: hidden;"><div class="simplebar-scrollbar simplebar-visible" style="height: 0px; display: none;"></div></div>
+		</div>
+		<div class="home__add-charts add-charts">
+			<div class="add-charts__item" data-simplebar="init">
+				<div class="simplebar-wrapper" style="margin: 0px 0px 0px -16px;">
+					<div class="simplebar-height-auto-observer-wrapper"><div class="simplebar-height-auto-observer"></div></div><div class="simplebar-mask">
+						<div class="simplebar-offset" style="right: 0px; bottom: 0px;">
+							<div class="simplebar-content-wrapper" tabindex="0" role="region" aria-label="scrollable content" style="height: auto; overflow: hidden;">
+								<div class="simplebar-content" style="padding: 0px 0px 0px 16px;">
+									<div class="add-charts__item-inner">
+										<div class="add-charts__item-container">
+											<canvas width="550" height="275" style="display: block; box-sizing: border-box; height: 275px; width: 550px;"></canvas>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div><div class="simplebar-placeholder" style="width: 567px; height: 275px;"></div>
+				</div><div class="simplebar-track simplebar-horizontal" style="visibility: hidden;"><div class="simplebar-scrollbar simplebar-visible" style="width: 0px; display: none;"></div></div><div class="simplebar-track simplebar-vertical" style="visibility: hidden;"><div class="simplebar-scrollbar simplebar-visible" style="height: 0px; display: none;"></div></div>
+			</div><div class="add-charts__item" data-simplebar="init">
+				<div class="simplebar-wrapper" style="margin: 0px 0px 0px -16px;">
+					<div class="simplebar-height-auto-observer-wrapper"><div class="simplebar-height-auto-observer"></div></div><div class="simplebar-mask">
+						<div class="simplebar-offset" style="right: 0px; bottom: 0px;">
+							<div class="simplebar-content-wrapper" tabindex="0" role="region" aria-label="scrollable content" style="height: auto; overflow: hidden;">
+								<div class="simplebar-content" style="padding: 0px 0px 0px 16px;">
+									<div class="add-charts__item-inner">
+										<div class="add-charts__item-container">
+											<canvas width="550" height="275" style="display: block; box-sizing: border-box; height: 275px; width: 550px;"></canvas>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div><div class="simplebar-placeholder" style="width: 567px; height: 275px;"></div>
+				</div><div class="simplebar-track simplebar-horizontal" style="visibility: hidden;"><div class="simplebar-scrollbar simplebar-visible" style="width: 0px; display: none;"></div></div><div class="simplebar-track simplebar-vertical" style="visibility: hidden;"><div class="simplebar-scrollbar simplebar-visible" style="height: 0px; display: none;"></div></div>
+			</div><div class="add-charts__item" data-simplebar="init">
+				<div class="simplebar-wrapper" style="margin: 0px 0px 0px -16px;">
+					<div class="simplebar-height-auto-observer-wrapper"><div class="simplebar-height-auto-observer"></div></div><div class="simplebar-mask">
+						<div class="simplebar-offset" style="right: 0px; bottom: 0px;">
+							<div class="simplebar-content-wrapper" tabindex="0" role="region" aria-label="scrollable content" style="height: auto; overflow: hidden;">
+								<div class="simplebar-content" style="padding: 0px 0px 0px 16px;">
+									<div class="add-charts__item-inner">
+										<div class="add-charts__item-container">
+											<canvas width="550" height="275" style="display: block; box-sizing: border-box; height: 275px; width: 550px;"></canvas>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div><div class="simplebar-placeholder" style="width: 567px; height: 275px;"></div>
+				</div><div class="simplebar-track simplebar-horizontal" style="visibility: hidden;"><div class="simplebar-scrollbar simplebar-visible" style="width: 0px; display: none;"></div></div><div class="simplebar-track simplebar-vertical" style="visibility: hidden;"><div class="simplebar-scrollbar simplebar-visible" style="height: 0px; display: none;"></div></div>
+			</div>
+		</div>
+	</section>
+</main>
+
+
+<footer class="footer">
+	<div class="footer__decor mode-1" aria-hidden="true">
+		<div class="footer__decor-blur">
+			<picture>
+				<source srcset="/Materials/footer-decor-element-1-blur.webp 1x" type="image/webp">
+				<img src="/Materials/footer-decor-element-1-blur.png" alt="" width="0" height="0">
+			</picture>
+		</div>
+		<div class="footer__decor-hero">
+			<img src="/Materials/footer-decor-element-1.svg" width="0" height="0" alt="">
+		</div>
+	</div>
+
+	<partial name="/Views/Shared/_FooterMeta.cshtml" />
+
+</footer>
+
+<script>
+	var home = document.getElementById("Home");
+	var testing = document.getElementById("Testing");
+	var result = document.getElementById("Results");
+
+	home.classList.remove("is-current");
+	testing.classList.remove("is-current");
+	result.classList.add("is-current");
+</script>
